--- a/Interfaz/Web.config
+++ b/Interfaz/Web.config
@@ -6,15 +6,16 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IServicio"/>
+        <binding name="BasicHttpBinding_IServicio" />
       </basicHttpBinding>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_IServicio"/>
+        <binding name="WSHttpBinding_IServicio" />
       </wsHttpBinding>
     </bindings>
     <client>
-      <!--desktop-espial-->
-      <endpoint address="http://localhost/PronosticosWCF/Servicio.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServicio" contract="ref_Servicio.IServicio" name="BasicHttpBinding_IServicio"/>
+      <endpoint address="http://desktop-espial/PronosticosWCF/Servicio.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServicio"
+        contract="ref_Servicio.IServicio" name="BasicHttpBinding_IServicio" />
     </client>
   </system.serviceModel>
 </configuration>
